# openstructure

./: .gitignore  .gitlab-ci.yml  CHANGELOG.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestConfig.cmake  ReadMe.txt  install.nsi  t.py
deployment/linux/: CMakeLists.txt  README.txt  create_bundle.py  create_bundle_alt.py  create_bundle_centos5.py  create_bundle_centos6.py  create_bundle_lucid.py  create_bundle_precise.py  create_qmean_bundle.py  ldd-rec.pl  reset_repository.py  reset_repository_qmean.py
deployment/linux/debian/: README
deployment/linux/fedora/: openstructure.desktop  openstructure.spec
deployment/macos/: CMakeLists.txt  Info.plist  bundle.py  create_bundle.py  deploy.py  deps.py  pack.py
deployment/macos/Installer.pmdoc/: 01dng-contents.xml  01dng.xml  02openstructure-contents.xml  02openstructure.xml  03examples-contents.xml  03examples.xml  index.xml
deployment/macos/OpenStructure.pmdoc/: 01dng-contents.xml  01dng.xml  02standalone-contents.xml  02standalone.xml  03examples-contents.xml  03examples.xml  index.xml
deployment/win/: CMakeLists.txt  create_archive.bat  create_archive.bat.in  dng.bat  exclude_file_types  excludes  log
modules/: CMakeLists.txt  index.rst
modules/base/doc/: base.dox  base.rst  generic.rst  generic_properties.dox  logging.rst  settings.rst  symmetry.rst  testutils.rst
modules/base/pymod/: CMakeLists.txt  __init__.py  __init__.py.in  export_generic_property.cc  export_logger.cc  export_range.cc  export_symmetry.cc  export_symop.cc  export_unit_cell.cc  export_units.cc  settings.py  stutil.py  table.py  table_selector.py  testutils.py  wrap_base.cc  xmlrunner.py
modules/base/src/: CMakeLists.txt  boost_filesystem_helper.cc  boost_filesystem_helper.hh  dyn_cast.hh  fixed_string.hh  generic_property.cc  generic_property.hh  integrity_error.cc  integrity_error.hh  invalid_handle.cc  invalid_handle.hh  log.cc  log.hh  log_sink.cc  log_sink.hh  message.cc  message.hh  module_config.hh  path.cc  path.hh  platform.cc  platform.hh  pod_vector.hh  profile.cc  profile.hh  ptr_observer.hh  range.hh  stdint.h  stdint.hh  string_ref.cc  string_ref.hh  symmetry.cc  symmetry.hh  symop.cc  symop.hh  symop_data.cc  tri_matrix.hh  unit_cell.cc  unit_cell.hh  units.cc  (+1 more)
modules/base/tests/: CMakeLists.txt  test_generic_property.cc  test_log.py  test_path.cc  test_pod_vector.cc  test_string_ref.cc  test_stutil.py  test_symop.cc  test_table.py  test_unit_cell.cc  tests.cc
modules/bindings/: CMakeLists.txt
modules/bindings/doc/: bindings.rst  blast.rst  cadscore.rst  clustalw.rst  dssp.rst  hbplus.rst  hhblits.rst  kclust.rst  lga.rst  msms.rst  naccess.rst  tmtools.rst
modules/bindings/pymod/: CMakeLists.txt  __init__.py  align_3dcomb.py  blast.py  cadscore.py  clustalw.py  dssp.py  export_tmalign.cc  hbplus.py  hhblits.py  hhblits2.py  hhblits3.py  ialign.py  kclust.py  lga.py  msms.py  naccess.py  tmtools.py  utils.py  wrap_bindings.cc
modules/bindings/src/: CMakeLists.txt  tmalign.f  tmscore.f  wrap_tmalign.cc  wrap_tmalign.hh
modules/bindings/tests/: CMakeLists.txt  test_blast.py  test_cadscore.py  test_clustalw.py  test_hbplus.py  test_hhblits.py  test_ialign.py  test_kclust.py  test_lga.py  test_msms.py  test_naccess.py  test_tmtools.py
modules/config/: CMakeLists.txt  base.hh  config.hh.in  dllexport.hh  version.hh  version.hh.in
modules/conop/data/: charmm.cif
modules/conop/doc/: aminoacid.rst  cleanup.rst  compoundlib.rst  connectivity.rst  conop.dox  conop.rst  functions.rst
modules/conop/pymod/: CMakeLists.txt  __init__.py  cleanup.py  export_amino_acids.cc  export_builder.cc  export_compound.cc  export_conop.cc  export_diag.cc  export_heuristic.cc  export_non_standard.cc  export_processor.cc  export_ring_finder.cc  export_rule_based.cc  export_sanitizer.cc  wrap_conop.cc
modules/conop/src/: CMakeLists.txt  amino_acids.cc  amino_acids.hh  builder.cc  builder.hh  builder_fw.hh  chemdict_parser.cc  chemdict_parser.hh  chemdict_tool.cc  compound.cc  compound.hh  compound_lib.cc  compound_lib.hh  compound_lib_base.cc  compound_lib_base.hh  conop.cc  conop.hh  diag.cc  diag.hh  heuristic.cc  heuristic.hh  heuristic_builder.cc  heuristic_builder.hh  heuristic_connect.cc  heuristic_connect.hh  heuristic_connect_table.hh  minimal_compound_lib.cc  minimal_compound_lib.hh  model_check.cc  model_check.hh  module_config.hh  nonstandard.cc  nonstandard.hh  processor.cc  processor.hh  ring_finder.cc  ring_finder.hh  rule_based.cc  rule_based.hh  rule_based_builder.cc  (+4 more)
modules/conop/tests/: CMakeLists.txt  helper.cc  helper.hh  test_amino_acids.cc  test_builder.cc  test_cleanup.py  test_compound.py  test_conop.cc  test_heuristic_builder.cc  test_heuristic_conop.cc  test_nonstandard.py  test_processor.py  test_rule_based_builder.cc  test_rule_based_conop.cc  tests.cc
modules/db/: CMakeLists.txt
modules/db/doc/: db.rst
modules/db/pymod/: CMakeLists.txt  __init__.py  export_linear_db.cc  wrap_db.cc
modules/db/src/: CMakeLists.txt  binary_container.cc  binary_container.hh  extract_data_helper.cc  extract_data_helper.hh  linear_indexer.cc  linear_indexer.hh  module_config.hh  paged_array.hh  sqlite3.c  sqlite_conv.hh  sqlite_wrap.cc  sqlite_wrap.hh
modules/db/tests/: CMakeLists.txt  test_linear_db.py
modules/doc/: actions.rst  contributing.rst  external.rst  install.rst  intro-01.rst  intro-02.rst  intro-03.rst  intro.rst  newmodule.rst  table.rst  users.rst
modules/geom/: CMakeLists.txt
modules/geom/doc/: composite.rst  geom.rst  mat.rst  vec.rst
modules/geom/pymod/: CMakeLists.txt  __init__.py  export_composite2.cc  export_composite2_op.cc  (+15 more)
modules/gfx/: CMakeLists.txt
modules/gui/: CMakeLists.txt
modules/img/: CMakeLists.txt
modules/info/: CMakeLists.txt
modules/iplt/: CMakeLists.txt
modules/mol/: CMakeLists.txt
scripts/: CMakeLists.txt  README.txt  bump-version.py  code_coverage.py  dng.bat.in  dng.in  dng_cl.in  gipltng.bat.in  gipltng.in  init.py  init_cl.py  init_iplt.py  ost-nightly-build.sh  ost.bat.in  ost.in  ost_config.in  ost_startup.py  ost_startup.py.in  qmean.in
(+2704 files in other folders)
